[package]
name = "rust-sdk-ticket"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "pr/790", features = [
    "server",
    "client",
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
reqwest = "0.13"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Web framework
axum = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
